# BLE-MIDI-Bridge

./: .gitignore  README.md  about.txt  package.json  rollup.config.bridge.js  rollup.config.material.js  rollup.config.material.mjs  rollup.config.parser.mjs
.github/workflows/: release.yml
.yarn/patches/: @material-web-npm-1.4.1-610cfb51a4.patch  @material-web-npm-2.3.0-e634be95cf.patch  @material-web-npm-2.4.1-7767d7234e.patch
app/: index.html  main.js  preload.js  renderer.js  style.css
app-build/: material-web.js
app-build/bridge/: bridge.js  midi-status-data.js
app-build/midi-out/: CMakeLists.txt  addon.cc  libremidi.9123385.patch  package.json
build-src/: material-web.js
build-src/bridge/: bridge.js  midi-status-data.js
lib/: material-web.js
lib/parser/: utils.js
parser/: constants.js  parser.js
scripts/: assets.js  electron-packaging.js
